Add lock --no-update because of the checkout.

--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -126,6 +126,7 @@ jobs:
       - name: Install library
         run: |
           git checkout develop
+          poetry lock --no-update
           poetry install --no-interaction 
 
       - name: Use given release-version number
