validating input version number for the prefix 'v'

--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -132,6 +132,7 @@ jobs:
         if: inputs.release-version != ''
         run: |
           if [[ ${{ inputs.release-version }} == v* ]]; then
+              release_version=${{ inputs.release-version }}
               echo "in if condition ${release_version}"
               release_version=${release_version#?}
               echo "in if condition ${release_version}"
