--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -77,7 +77,9 @@ jobs:
 
       - name: Abort merge dry-run
         run: |
-          git merge --abort
+          if [[ -f .git/MERGE_HEAD ]]; then
+            git merge --abort
+          fi
 
       - name: Check if merge had conflicts.
         # if there is conflict and there is no merge strategy set then abort merge and exit
