--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -77,7 +77,9 @@ jobs:
 
       - name: Abort merge dry-run
         run: |
-          git merge --abort
+          if [[ -f .git/MERGE_HEAD ]]; then
+            git merge --abort
+          fi
 
       - name: Check if merge had conflicts.
         # if there is conflict and there is no merge strategy set then abort merge and exit
@@ -119,8 +121,13 @@ jobs:
       - name: Use given release-version number
         if: inputs.release-version != ''
         run: |
-          echo "Using given release version is ${{ inputs.release-version }}"
-          poetry version ${{ inputs.release-version }}
+          release_version=${{ inputs.release-version }}
+          if [[ ${{ inputs.release-version }} == v* ]]; then
+              release_version=${release_version#?}
+              echo "Trimming initial 'v'. Using version ${release_version}"
+          fi
+          echo "Using given release version  ${release_version}"
+          poetry version ${release_version}
 
           NEW_TAG=v$(poetry version --short)
 
@@ -140,7 +147,6 @@ jobs:
           # current_tag is the last tagged release in the repository.   From there
           # we need to remove the v from the beginning of the tag.
           echo "Bump rule is ${{ inputs.bump-rule }}"
-          echo "Given release version is ${{ inputs.release-version }}"
           if ! $(git tag -l "v*" = ''); then
             # uses -V which is version sort to keep it monotonically increasing.
             current_tag=$(git tag -l "v*" | grep --invert-match '-' | sort --reverse -V  | sed -n 1p)
