--- a/.github/workflows/test_with_latest_volttron.yml
+++ b/.github/workflows/test_with_latest_volttron.yml
@@ -17,9 +17,8 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - run: echo "🎉 The job was triggered by a ${{ github.workflow }}"
+      - run: echo "🔎 The job was triggered from repository ${{ github.repository }} and branch ${{ github.ref }}"
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
 
       #----------------------------------------------
       #       check-out repo and set-up python
