minor doc update

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -23,7 +23,7 @@ jobs:
       #----------------------------------------------
       #       check-out repo and set-up python
       #----------------------------------------------
-      - name: Checkout code
+      - name: Checkout develop branch for periodic testing
         if: ${{ github.event_name == 'schedule' }}
         uses: actions/checkout@v4
         with:
